--- a/package.json
+++ b/package.json
@@ -17,5 +17,19 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2"
+    },
+    "dev": {
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "dev:all": "php artisan serve & npm run dev"
+    },
+    "devDependencies": {
+        "axios": "^1.6.4",
+        "laravel-vite-plugin": "^1.0",
+        "vite": "^5.0"
+    }
     }
 }
